<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#3157B7">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo_2"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="230dp"

            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="?attr/colorBackgroundFloating"
            app:contentPadding="@dimen/cardview_default_radius"
            app:cardCornerRadius="8dp"
            app:cardMaxElevation="8dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp">


                    <EditText
                        android:id="@+id/et_dataUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Usuario"
                        android:inputType="textPersonName"
                        android:drawableRight="@drawable/ic_login_user"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <EditText
                        android:id="@+id/et_dataPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:drawableRight="@drawable/ic_login_pass"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/bt_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/btn_login_round"
                        android:textAllCaps="false"
                        android:text="Ingresar"
                        android:textSize="18sp"
                        android:textColor="#ffffff"/>
                </LinearLayout>

            </LinearLayout>



        </android.support.v7.widget.CardView>

    </LinearLayout>



</LinearLayout>